# stl-man

./: CMakeLists.txt
include/: Parser.h  StlModel.h
meshes/: pyramid.stl  sphere.stl  torus.stl
src/: Parser.cpp  main.cpp  other.cpp
